--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,19 +11,19 @@ jobs:
             - name: Checkout source
               uses: actions/checkout@v3
             - name: Login to Docker Hub
-              run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD  }}
-            - name: BuildDocker Image
+              run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            - name: Build Docker Image
               run: docker build -t mandaartamboli/react-app .
-            - name: publish image to docker hub
+            - name: Publish image to Docker Hub
               run: docker push mandaartamboli/react-app:latest
 
     deploy:
-      needs: build
-      runs-on: [self-hosted, aws-ec2-runner]
-      steps:
-      - name: pULL IMAGE FROM DOCKER HUB
-        run: DOCKER PULL mandaartamboli/react-app:latest
-      - name: Deleteold Container
-        run: docker rm -f reactContainer
-      - name: Run docker container
-        run: docker run -d -p 3000:80 --name  reactContainer mandaartamboli/react-app:latest
+        needs: build
+        runs-on: [self-hosted, aws-ec2-runner]
+        steps:
+            - name: Pull image from Docker Hub
+              run: docker pull mandaartamboli/react-app:latest
+            - name: Delete old container
+              run: docker rm -f reactContainer || true
+            - name: Run Docker container
+              run: docker run -d -p 3000:80 --name reactContainer mandaartamboli/react-app:latest
