--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
 
     deploy:
         needs: build
-        runs-on: [self-hosted, aws-ec2-runner]
+        runs-on: self-hosted
         steps:
             - name: Pull image from Docker Hub
               run: docker pull mandaartamboli/react-app:latest
